--- a/WebContent/reporte/reportAyudasParametrizados.jrxml
+++ b/WebContent/reporte/reportAyudasParametrizados.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="documento_asignacion" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" scriptletClass="net.sf.jasperreports.engine.JRDefaultScriptlet" uuid="2cc1dfe8-35f4-44cb-b41c-1c58e9d3b41e">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="31"/>
 	<parameter name="titulo" class="java.lang.String"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["C:\\Users\\Soaint\\Desktop\\"]]></defaultValueExpression>
@@ -57,7 +57,7 @@
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="205" splitType="Stretch">
+		<band height="200" splitType="Stretch">
 			<printWhenExpression><![CDATA[$V{PAGE_NUMBER}.intValue() == 1? new Boolean(true) : new Boolean(false)]]></printWhenExpression>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="0" y="32" width="554" height="24" uuid="87c1a97e-0be6-4d70-a5f4-2b1f9868657c"/>
@@ -74,7 +74,7 @@
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText" mode="Opaque" x="243" y="183" width="87" height="20" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="1323a6f7-aa9e-42e1-872f-f4316fef787f"/>
+				<reportElement key="staticText" mode="Opaque" x="243" y="179" width="87" height="20" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="1323a6f7-aa9e-42e1-872f-f4316fef787f"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -87,7 +87,7 @@
 				<text><![CDATA[Urgencia]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText" mode="Opaque" x="335" y="183" width="129" height="20" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="f3224a8c-3ff0-467d-85b0-3a8faa8321df"/>
+				<reportElement key="staticText" mode="Opaque" x="335" y="179" width="129" height="20" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="f3224a8c-3ff0-467d-85b0-3a8faa8321df"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -156,7 +156,7 @@
 				<textFieldExpression><![CDATA[$P{tRecursos}==""?null : $P{tRecursos}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText" mode="Opaque" x="0" y="183" width="108" height="20" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="fab501d4-9034-413d-9798-995e8e92d43e"/>
+				<reportElement key="staticText" mode="Opaque" x="0" y="179" width="108" height="20" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="fab501d4-9034-413d-9798-995e8e92d43e"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -169,7 +169,7 @@
 				<text><![CDATA[Titulo Solicitud]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText" mode="Opaque" x="112" y="183" width="127" height="20" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="757384e6-e86b-4625-8990-0922fe949380"/>
+				<reportElement key="staticText" mode="Opaque" x="112" y="179" width="127" height="20" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="757384e6-e86b-4625-8990-0922fe949380"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -182,7 +182,7 @@
 				<text><![CDATA[Solicitante]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText" mode="Opaque" x="468" y="183" width="87" height="20" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="98e19641-be80-4c66-b3a3-749fdd6dbde7"/>
+				<reportElement key="staticText" mode="Opaque" x="468" y="179" width="87" height="20" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="98e19641-be80-4c66-b3a3-749fdd6dbde7"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -206,37 +206,37 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="26">
+		<band height="25">
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" x="112" y="6" width="127" height="20" isPrintWhenDetailOverflows="true" uuid="21e662ed-4d9b-4b6b-841d-666ae23c4098"/>
+				<reportElement positionType="Float" x="112" y="3" width="127" height="20" isPrintWhenDetailOverflows="true" uuid="21e662ed-4d9b-4b6b-841d-666ae23c4098"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{fkBeneficiario.fkPersona.nombre}+"  "+ $F{fkBeneficiario.fkPersona.apellido}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" x="0" y="6" width="108" height="20" isPrintWhenDetailOverflows="true" uuid="5cb31127-9ddf-4bea-bfd2-0e569b6faa3f"/>
+				<reportElement positionType="Float" x="0" y="3" width="108" height="20" isPrintWhenDetailOverflows="true" uuid="5cb31127-9ddf-4bea-bfd2-0e569b6faa3f"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{titulo}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" x="243" y="6" width="87" height="20" isPrintWhenDetailOverflows="true" uuid="ec528437-eb8a-4d8b-908a-061d71fc50eb"/>
+				<reportElement positionType="Float" x="243" y="3" width="87" height="20" isPrintWhenDetailOverflows="true" uuid="ec528437-eb8a-4d8b-908a-061d71fc50eb"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{urgencia} == 0 ? "Alta" : $F{urgencia} == 1 ? "Media"  :  $F{urgencia} == 2 ? "Baja" : ""]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" x="335" y="6" width="129" height="20" isPrintWhenDetailOverflows="true" uuid="b2f956a5-5dfb-498e-a4c9-f22d0e1773a1"/>
+				<reportElement positionType="Float" x="335" y="3" width="129" height="20" isPrintWhenDetailOverflows="true" uuid="b2f956a5-5dfb-498e-a4c9-f22d0e1773a1"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{fkAyuda.nombre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="469" y="6" width="86" height="20" uuid="d87ce8fa-35e2-4c63-b4e1-2cb9da1fcb8c"/>
+				<reportElement x="469" y="3" width="86" height="20" uuid="d87ce8fa-35e2-4c63-b4e1-2cb9da1fcb8c"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 					<font fontName="Arial"/>
 				</textElement>
@@ -266,21 +266,21 @@
 					<pen lineWidth="2.0" lineStyle="Solid"/>
 				</graphicElement>
 			</line>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement x="332" y="25" width="217" height="16" forecolor="#F26B7A" uuid="2f0ed72a-f99a-4c38-9782-da1c1142b97a"/>
 				<textElement textAlignment="Left">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{tCorreoOrganizacion}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement x="8" y="25" width="307" height="16" forecolor="#F26B7A" uuid="aa268819-65c8-472b-a964-bab8897ad205"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{tTelefonoOrganizacion}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement x="8" y="10" width="541" height="15" forecolor="#F26B7A" uuid="121aa8e0-c34d-4ebb-9ec3-a61b9d3b1ca1"/>
 				<textElement textAlignment="Center">
 					<font fontName="Arial"/>
