--- a/WebContent/views/desktop/gestion/ayudas/asignacionAyuda/AsignacionAyudaFinalizarFormBasic.zul
+++ b/WebContent/views/desktop/gestion/ayudas/asignacionAyuda/AsignacionAyudaFinalizarFormBasic.zul
@@ -111,44 +111,35 @@
 
 				</div>
 				
-				<div class="row">
-
-					<div class="input-field col s11">
-						<n:label for="recurso" class="active">
-							Seleccione los Recursos:
-						</n:label>
-						
-					</div>
-					<div class="input-field col s1"
-						style="font-size: 2em;">
-						<button
-							sclass="teal lighten-1 waves-effect waves-light"
-							onClick="@command('buscarRecurso')" iconSclass="fa fa-search"
-							style="padding: 5px 15px; background-color: #2AA4EF !important">
-						</button>
-					</div>
-
-				</div>
+				
 				
 				<div class="row">
 			<div class="col s12">
 
-				<listbox height="300px"
+				<listbox height="200px"
 					emptyMessage="No hay Recursos Seleccionados."
-					model="@bind(vm.recursos)">
+					model="@bind(vm.solicitudAyudaRecursos)">
 					<listhead sizable="true">
-						<listheader width="50%" label="Nombre" />
-						<listheader width="50%" label="Descripcion" />
-						
+						<listheader width="50%" label="Nombre de Recurso" />
+						<listheader width="50%" label="Descripcion de Recurso" />
+						<listheader width="50%" label="Cantidad a Asignar" />
 					</listhead>
 					<template name="model">
 						<listitem>
 							<listcell
-								label="@load(each.nombre)">
+								label="@load(each.fkRecurso.nombre)">
 							</listcell>
 							
 							<listcell
-								label="@load(each.descripcion)">
+								label="@load(each.fkRecurso.descripcion)">
+							</listcell>
+							
+							<listcell>
+							<intbox
+									style="background: #f2fca5; height: 1em; border: 1px solid #999999; border-radius: 7px; font-size:1.2em;  text-align: center;"
+									value="@bind(each.cantidad)">
+								</intbox>
+							
 							</listcell>
 							
 
@@ -163,7 +154,7 @@
 				
 				
 				
-				<!-- 
+				
 				<div class="row">
 
 					<div class="input-field col s12">
@@ -177,7 +168,7 @@
 					</div>
 
 				</div>
-				 -->
+				 
 				
 				
 
