--- a/WebContent/views/desktop/gestion/ayudas/asignacionAyuda/selectSolicitudAyuda.zul
+++ b/WebContent/views/desktop/gestion/ayudas/asignacionAyuda/selectSolicitudAyuda.zul
@@ -23,18 +23,14 @@
 
 							<listhead sizable="true">
 							<listheader width="250px" label="Titulo de Solicitud" />
-							<listheader width="250px" label="Estatus de Solicitud" />
 							<listheader width="250px" label="Nombre de Beneficiario" />
 							<listheader width="250px" label="Apellido de Beneficiario" />
-							<listheader width="250px" label="Identificacion de Beneficiario" />
 							
 							 
 							<listheader width="250px" label="Nombre de Representante" />
-							<listheader width="250px" label="Apellido de Representante" />
 							<listheader width="250px" label="Identificacion de Representante" />
+							
 							<listheader width="250px" label="Ayuda Solicitada" />
-							
-							
 							<listheader width="150px" label="Urgencia" />
 							<listheader width="150px" label="Fecha" />
 							</listhead>
@@ -42,17 +38,16 @@
 								<listitem>
 									<listcell
 										label="@load(each.titulo)" />
-										<listcell label="@load(each.estatusSolicitudEnum)" />
-								<listcell label="@load(each.fkBeneficiario.fkPersona.nombre)" />
-								<listcell label="@load(each.fkBeneficiario.fkPersona.apellido)" />
+										
+								<listcell label="@load(each.fkBeneficiario.fkPersona.nombre.concat(' ').concat(each.fkBeneficiario.fkPersona.apellido))" />
 								<listcell label="@load(each.fkBeneficiario.fkPersona.identificacion)" />
 								
 								
-								<listcell label="@load(each.fkBeneficiario.fkFamiliar.fkPersona.nombre)" />
-								<listcell label="@load(each.fkBeneficiario.fkFamiliar.fkPersona.apellido)" />
-								<listcell label="@load(each.fkBeneficiario.fkFamiliar.fkPersona.identificacion)" />
-								 <listcell label="@load(each.fkAyuda.nombre)" />
 								
+								<listcell label="@load(each.fkBeneficiario.fkFamiliar.fkPersona.nombre.concat(' ').concat(each.fkBeneficiario.fkFamiliar.fkPersona.apellido))" />
+								<listcell label="@load(each.fkBeneficiario.fkFamiliar.fkPersona.identificacion)" />
+								 
+								<listcell label="@load(each.fkAyuda.nombre)" />
 								<listcell label="@load(each.urgenciaEnum)" />
 								<listcell label="${m:convertirLongATimestamp(each.fecha)}" />  
 									
