Modificaciones para la seguridad funcional

--- a/WebContent/views/seguridad/usuarios/usuariosIndex.zul
+++ b/WebContent/views/seguridad/usuarios/usuariosIndex.zul
@@ -14,7 +14,7 @@
 						selectedItem="@bind(vm.selectedObject)">
 
 						<listhead sizable="true">
-							<listheader label="Correo" />
+							<listheader label="Usuario" />
 							<listheader label="Rol" />
 							<listheader label="Estatus" />
 						</listhead>
