--- a/WebContent/views/seguridad/usuarios/usuariosFormBasic.zul
+++ b/WebContent/views/seguridad/usuarios/usuariosFormBasic.zul
@@ -1,14 +1,54 @@
+<?component name="uploadImageSingle" macroURI="/assets/theme/components/upload_image_single.zul"?>
+<?xel-method prefix="m" name="getUrlWeb" class="lights.smile.util.Zki" 
+	signature="java.lang.String getUrlWeb(java.lang.String)" ?>
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="80%" class="container ${arg.animation_}" use="karen.core.form.controllers.C_WindowForm"
+	<div width="80%" class="container ${arg.animation_}"
+		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.seguridad.usuarios.viewmodels.VM_UsuariosFormBasic')">
 
 		<div class="row">
 
 			<div class="col s12">
+				<div class="input-field col s2">
+					<div align="center"
+						visible="@load(not empty vm.persona.fkMultimedia and not empty vm.persona.fkMultimedia.url)">
+						<image
+							src="${m:getUrlWeb(vm.persona.fkMultimedia.url)}" width="30px"
+							height="30px" sclass="circle">
+						</image>
+					</div>
+				</div>
+				<div class="input-field col s8">
+					<n:label for="responsable"
+						class="mandatory active">
+						Persona:
+					</n:label>
+					<textbox id="responsable" type="text"
+						disabled="true" multiline="true" sclass="materialize-textarea"
+						value="@bind(vm.persona.identificacion.concat(' - ').concat(vm.persona.nombre.concat(' ')).concat(vm.persona.apellido))">
+					</textbox>
+				</div>
+				<div class="input-field col s2"
+					style="font-size: 2em;">
+					<button
+						sclass="teal lighten-1 waves-effect waves-light"
+						iconSclass="fa fa-search" onClick="@command('buscarPersona')"
+						style="padding: 5px 15px;">
+					</button>
+					<button sclass="red waves-effect waves-light"
+						iconSclass="fa fa-times" onClick="@command('quitarPersona')"
+						style="padding: 5px 15px;">
+					</button>
+				</div>
+			</div>
+			<div class="col s12">
 				<div class="input-field col s12">
-					<n:label for="correo" class="mandatory">Correo</n:label>
-					<textbox id="correo" type="text" value="@bind(vm.usuario.correo)">
+					<n:label for="correo" class="mandatory active">
+						Usuario
+					</n:label>
+					<textbox id="correo" type="text"
+						value="@bind(vm.usuario.correo)">
 					</textbox>
 				</div>
 			</div>
@@ -19,11 +59,17 @@
 						value="@load(vm.usuario.fkRol.nombre)">
 					</textbox>
 				</div>
-				<div class="input-field col s2" style="font-size: 2em;">
-					<button sclass="teal lighten-1 waves-effect waves-light"
-						iconSclass="fa fa-search" onClick="@command('buscarRol')" style="padding: 5px 15px;"></button>
-					<button sclass="red waves-effect waves-light" iconSclass="fa fa-times"
-						onClick="@command('quitarRol')" style="padding: 5px 15px;"></button>
+				<div class="input-field col s2"
+					style="font-size: 2em;">
+					<button
+						sclass="teal lighten-1 waves-effect waves-light"
+						iconSclass="fa fa-search" onClick="@command('buscarRol')"
+						style="padding: 5px 15px;">
+					</button>
+					<button sclass="red waves-effect waves-light"
+						iconSclass="fa fa-times" onClick="@command('quitarRol')"
+						style="padding: 5px 15px;">
+					</button>
 				</div>
 			</div>
 			<div class="col s12">
@@ -39,7 +85,8 @@
 				</div>
 			</div>
 		</div>
-		<div id="divButtonsForm" use="karen.core.form.buttons.containers.DivButtonsForm">
+		<div id="divButtonsForm"
+			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
 	</div>
 </zk>
