--- a/WebContent/views/web/calendario.zul
+++ b/WebContent/views/web/calendario.zul
@@ -16,7 +16,7 @@
 	<div sclass="container-fluid">
 		<div class="cinta"></div>
 	</div>
-	<div class="container-fluid" style="Background-color: #F0F2DC;" 
+	<div class="container-fluid calendario" style="Background-color: #F0F2DC;" 
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.web.viewmodels.calendario.VM_Calendario')">
 		<div class="row" style="margin-bottom: 0;">
