--- a/WebContent/views/web/conocenos.zul
+++ b/WebContent/views/web/conocenos.zul
@@ -1,41 +1,5 @@
-<!-- 
-<?page title="FANCA" contentType="text/html;charset=UTF-8"?>
-<?meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"?>
-
-
-<?link href="/resources/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/materialize_v0.97.5/css/materialize.min.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/theme.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/karen.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/loading.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/animate.css" rel="stylesheet" type="text/css"?>
-<?link href="/assets/seguridad/css/ultimasSesionesActivas.zul.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/galeria.css" rel="stylesheet" type="text/css"?>
-
-<?link href="/resources/css/portal/main.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/navbar.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/galeriaMain.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/eventosMain.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/participaMain.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/footer.css" rel="stylesheet" type="text/css"?>
-
-<?link href="/resources/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/owl-carousel/owl.theme.css" rel="stylesheet" type="text/css"?>
-
-<?script src="/resources/owl-carousel/owl.carousel.js"?>
-
-<?script src="/resources/bootstrap/js/bootstrap.js"?>
-<?script src="/resources/materialize_v0.97.5/js/materialize.min.js"?>
-
-<?script src="/resources/js/shorcut.js"?>
-<?script src="/resources/js/fullScreenApi.js"?>
-<?script src="/resources/js/index.js"?>
-
- -->
-
-
-
+<?xel-method prefix="m" name="getUrlWeb" class="lights.smile.util.Zki" 
+	signature="java.lang.String getUrlWeb(java.lang.String)" ?>
 <zk xmlns:n="native" xmlns:w="client">
 	<n:link href="assets/css/web/conocenos.css" rel="stylesheet" type="text/css"></n:link>
 <!--  	<n:link href="assets/css/web/main.css" rel="stylesheet" type="text/css"></n:link> -->
@@ -135,13 +99,10 @@
 		
 			<div sclass="row">
 				<div sclass="col s11">
-<!-- 				cargar el div con los objetos del metodo getnoticias en el VM con el atributo children -->
 					<div class="owlNoticias owl-carousel owl-theme" children="@load(vm.valores)">
-<!-- 				cargar el div con los objetos del metodo getnoticias en el VM con el atributo children -->
-<!-- usaremos la etiqueta template para encapsular cada elemento y definir la forma en que se renderiza					 -->
 						<template name="children">
 							<div class="borde-blanco">
-								<image class="img-responsive center-block" src="@load(each.fkMultimedia.url)"></image>
+								<image class="img-responsive center-block" src="${m:getUrlWeb(each.fkMultimedia.url)})"></image>
 								<div class="caption">
 									<label class="texto-valores center-block" value="@load(each.nombre)"></label>
 									
@@ -150,7 +111,6 @@
 							
 							
 						</template>
-<!-- usaremos la etiqueta template para encapsular cada elemento y definir la forma en que se renderiza					 -->						
 					</div>
 				</div>
 				
