Corecciones de Tabajadores

--- a/WebContent/views/desktop/gestion/trabajadores/egreso/registroMotivo.zul
+++ b/WebContent/views/desktop/gestion/trabajadores/egreso/registroMotivo.zul
@@ -1,33 +1,67 @@
 <zk xmlns:n="native" xmlns:w="client">
 	<div sclass="animated fadeInLeft">
 		<div class="row">
-			<div class="col s12" align="center" style="margin-bottom: 15px;">
-				<label value="Ingrese el motivo de la selección" sclass="label-medium-500"></label>
+			<div class="col s12" align="center"
+				style="margin-bottom: 15px;">
+				<label value="Ingrese el motivo del egreso"
+					sclass="label-medium-500">
+				</label>
 			</div>
 		</div>
-		
-		<div width="100%">
+		<div>
 			<div class="row">
 				<div class="col s12">
-					
 					<div class="col s12">
 						<div class="input-field offset-s2 col s8">
-							<n:label class="active" for="fk_motivo">Motivo</n:label>
-							<combobox id="fk_motivo" readonly="true" model="@bind(vm.motivos)" selectedItem="@bind(vm.selectedObject.fkMotivo)">
+							<n:label for="Cedula" class="active">
+								Identificación
+							</n:label>
+							<textbox id="Cedula" type="text"
+								disabled="true"
+								value="@bind(vm.selectedObject.fkPersona.identificacion)">
+							</textbox>
+						</div>
+					</div>
+					<div class="col s12">
+						<div class="input-field offset-s2 col s8">
+							<n:label for="nombre" class="active">
+								Trabajador
+							</n:label>
+							<textbox id="nombre" type="text"
+								disabled="true"
+								value="@bind(vm.selectedObject.fkPersona.nombre.concat(' ').concat(vm.selectedObject.fkPersona.apellido))">
+							</textbox>
+						</div>
+					</div>
+
+					<div class="col s12">
+						<div class="input-field offset-s2 col s8">
+							<n:label class="active" for="fk_motivo">
+								Motivo
+							</n:label>
+							<combobox id="fk_motivo" readonly="true"
+								model="@bind(vm.motivos)"
+								selectedItem="@bind(vm.selectedObject.fkMotivo)">
 								<template name="model">
-									<comboitem label="@load(each.nombre)" />
+									<comboitem
+										label="@load(each.nombre)" />
 								</template>
 							</combobox>
 						</div>
 					</div>
-					
+
 					<div class="col s12">
 						<div class="input-field offset-s2 col s8">
-							<n:label for="nombre">Observaciones</n:label>
-								<textbox id="observaciones" type="text" sclass="materialize-textarea" multiline="true" maxlength="200" value="@bind(vm.selectedObject.observacion)"> </textbox>
+							<n:label for="nombre">
+								Observaciones
+							</n:label>
+							<textbox id="observaciones" type="text"
+								sclass="materialize-textarea" multiline="true" maxlength="200"
+								value="@bind(vm.selectedObject.observacion)">
+							</textbox>
 						</div>
 					</div>
-					
+
 				</div>
 			</div>
 		</div>
