--- a/WebContent/views/desktop/gestion/trabajadores/fortalezas/registroCompletado.zul
+++ b/WebContent/views/desktop/gestion/trabajadores/fortalezas/registroCompletado.zul
@@ -9,7 +9,7 @@
 					</span>
 				</div>
 				<div sclass="row">
-					<label value="Registro completado con exitosamente"
+					<label value="Registro completado exitosamente"
 						sclass="label-medium-500" style="font-size: 20px;">
 					</label>
 				</div>
