--- a/WebContent/views/desktop/gestion/trabajadores/fortalezas/listaFortalezas.zul
+++ b/WebContent/views/desktop/gestion/trabajadores/fortalezas/listaFortalezas.zul
@@ -1,55 +1,82 @@
 <zk xmlns:n="native" xmlns:w="client">
 	<div sclass="animated fadeInLeft">
 		<div class="row">
-			<div class="col s12" align="center" style="margin-bottom: 15px;">
-				<label value="Seleccione las fortalezas del trabajador" sclass="label-medium-500"></label>
+			<div class="input-field col s6">
+				<n:label for="Cedula" class="active">
+					Identificación
+				</n:label>
+				<textbox id="Cedula" type="text" disabled="true"
+					value="@bind(vm.selectedObject.fkPersona.identificacion)">
+				</textbox>
+			</div>
+			<div class="input-field col s6">
+				<n:label for="nombre" class="active">
+					Trabajador
+				</n:label>
+				<textbox id="nombre" type="text" disabled="true"
+					value="@bind(vm.selectedObject.fkPersona.nombre.concat(' ').concat(vm.selectedObject.fkPersona.apellido))">
+				</textbox>
 			</div>
 		</div>
-		
-		<div class="input-field col s6">
-								<n:label for="nombre">Trabajador</n:label>
-								<textbox id="nombre" type="text" disabled="true"
-									value="@bind(vm.selectedObject.fkPersona.nombre.concat(' ').concat(vm.selectedObject.fkPersona.apellido))">
-								</textbox>
+		<div class="row">
+			<div class="col s12" align="center"
+				style="margin-bottom: 15px;">
+				<label value="Seleccione las fortalezas del trabajador"
+					sclass="label-medium-500">
+				</label>
+			</div>
 		</div>
-		
 		<div width="100%">
 			<div class="row">
 				<div class="col s12">
-					
+
 					<div sclass="col s5" style="padding:0px">
-						<listbox model="@load(vm.fortalezas)" emptyMessage="No hay fortalezas registradas" selectedItems="@bind(vm.fortalezasSeleccionadas)" multiple="true">
-							<listhead sizable="true">
+						<listbox model="@load(vm.fortalezas)" 
+							height="400px" emptyMessage="No hay fortalezas registradas"
+							selectedItems="@bind(vm.fortalezasSeleccionadas)"
+							multiple="true">
+							<listhead>
 								<listheader label="Fortalezas" />
 							</listhead>
 							<template name="model">
 								<listitem label="@load(each.nombre)">
-									<zscript> self.setDisabled(vm.disabledFortaleza(each)); </zscript>
+									<zscript>
+	self.setDisabled(vm.disabledFortaleza(each));
+</zscript>
 								</listitem>
 							</template>
 						</listbox>
 					</div>
-					
+
 					<div sclass="col s1" align="center">
 						<div sclass="row">
-							<button sclass="button-conf" iconSclass="fa fa-angle-double-right" onClick="@command('agregarFortalezas')" />
+							<button sclass="button-conf"
+								iconSclass="fa fa-angle-double-right"
+								onClick="@command('agregarFortalezas')" />
 						</div>
 						<div sclass="row">
-							<button sclass="button-conf" iconSclass="fa fa-angle-double-left" onClick="@command('removerFortalezas')" />
+							<button sclass="button-conf"
+								iconSclass="fa fa-angle-double-left"
+								onClick="@command('removerFortalezas')" />
 						</div>
 					</div>
 
 					<div sclass="col s5" style="padding:0px">
-						<listbox model="@load(vm.trabajadorFortalezas)" emptyMessage="No hay fortalezas asociadas al trabajador" selectedItems="@bind(vm.trabajadorFortalezasSeleccionadas)" multiple="true">
+						<listbox model="@load(vm.trabajadorFortalezas)"
+							height="400px"
+							emptyMessage="No hay fortalezas asociadas al trabajador"
+							selectedItems="@bind(vm.trabajadorFortalezasSeleccionadas)"
+							multiple="true">
 							<listhead sizable="true">
-								<listheader label="Fortalezas del trabajador" />
+								<listheader
+									label="Fortalezas del trabajador" />
 							</listhead>
 							<template name="model">
 								<listitem label="@load(each.nombre)" />
 							</template>
 						</listbox>
 					</div>
-					
+
 				</div>
 			</div>
 		</div>
